[package]
name = "tcp-changes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1.40"
bytes = "1.6.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tokio-rustls = "0.26.0"
rustls = "0.23.12"
tls-helpers = "0.1.3"
